[gd_scene load_steps=2 format=3 uid="uid://dlv6snrh7s31t"]

[ext_resource type="Script" uid="uid://d0qo4app5wuml" path="res://scenes/ui_prefabs/filter_controls/filter_controls.gd" id="1_xjnrg"]

[node name="FilterControls" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xjnrg")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="EnabledToggle" type="CheckBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Enabled"

[node name="NotchToggle" type="CheckBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Notch"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="CutoffSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 11050.0
value = 1.0
exp_edit = true

[node name="CutoffLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CutOff: % Hz"

[node name="QualitySlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.1
step = 0.1
value = 0.1

[node name="QualityLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quality: %"

[node name="GainSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -24.0
max_value = 24.0

[node name="GainLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gain: % dB"
